NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

V1.3.2
- Bugfix : AJAX reload didn't work if slideshow is shown by default
- Bugfix : Redirect links didn't work if permalinks are deactivates

V1.3.1 - 07.06.2009
- Bugfix : Fixed ZIP upload, wrong variable used
- Bugfix : Check for array before foreach in album missing

V1.3.0 - 07.06.2009
- NEW : Subalbum support
- NEW : Search for images in the admin tab
- NEW : Add new gallery also in manage tab
- NEW : AJAX support for Imagebrowser and gallery navigation (THX to Anty)
- NEW : Added zip upload via URL (THX to Juan Jose Galvez)
- Added : jQuery Multiple File Upload Plugin v1.44
- Added : SWFUpload V2.2.0
- Changed : Remove extension for Alttext during first import
- Changed : Meta tag added via wp_head hook (THX to Viper)
- Bugfix : Correct various PHP notice messages
- Bugfix : Typo fix in custom fields for ngg_gal_ImageBrowser
- Bugfix : Avoid upload of images in gallery without correct capability  

V1.2.1 - 22.03.2009
- NEW : Support for IE8 Web Slices in widgets
- NEW : Add filter ngg_image_object
- Changed : Descending order in add gallery menu
- Bugfix : Exclude option didnT work for multi pages
- Bugfix : Check for correct capability in manage gallery

V1.2.0 - 09.03.2009
- NEW : Support for image tag cloud with shortcode [tagcloud]
- NEW : Adding shortcode [recent max="7" template="filename" /] & [random max="7" template="filename" /] to show the most recent/random pictures (THX to Bernhard)
- NEW : Crop thumbnails manually (THX to Simone Fumagalli)
- NEW : Support for i18n with polyglot or qtrans plugin (THX to Boris Glumpler)
- NEW : Canonical meta link support
- Added : SWFUpload V2.2.0 B5
- Added : New memory limit check in upload screen
- Bugfix : Language typo fixes
- Bugfix : Admin Pagination fix
- Bugfix : Typo fix in widgets
- Bugfix : Init column script after document is ready
- Bugfix : htmlspecialchars() instead htmlentities() for links in the a href title description